...
        super.viewDidAppear(animated)
        centuries = centuryService.getAllCenturies().reversed()
        tableView.reloadData()
    }
    
    private func setupYearTextField() {
        yearTextField.placeholder = "Year"
        
        yearTextField.leftView = UIView(
            frame: CGRect(x: 0, y: 0, width: 10, height: 0))
        yearTextField.rightView = UIView(
            frame: CGRect(x: 0, y: 0, width: 10, height: 0))
        yearTextField.leftViewMode = .always
...
            make.height.equalTo(yearTextField)
            make.width.equalTo(searchButton.snp.height)
        }
    }
    
    private func setupTableView() {
        tableView.accessibilityIdentifier = "HistoryTableView"
        
        tableView.backgroundColor = .clear
        
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(UITableViewCell.self,
...
