...
    
    private func setupWhatCenturyButton() {
        whatCenturyButton.addTarget(
            self,
            action: #selector(calculateCentury),
            for: .touchUpInside)
        whatCenturyButton.setTitle("What Century?", for: .normal)
        whatCenturyButton.backgroundColor = .systemBlue
        whatCenturyButton.titleLabel?.font = .systemFont(ofSize: 20)
        whatCenturyButton.titleLabel?.textColor = .white
        whatCenturyButton.layer.cornerRadius = 16
        whatCenturyButton.layer.masksToBounds = true
        
...
